@@ -54,3 +54,4 @@ vid_right.shp
 vid_resolution.shp
 vid_scaling.shp
 hp_bar.shp
+sfx_icon.shp
