@@ -300,6 +300,7 @@ Exult_Game ExultMenu::run()
 	int num_choices = sizeof(menuchoices)/sizeof(int);
 	int *menuentries = new int[num_choices];
 	int entries = 0;
+	int sfx_bg_ypos, sfx_si_ypos;
 	
 	int ypos = menuy-24;
 	for(int i=0; i<num_choices; i++) {
@@ -307,6 +308,10 @@ Exult_Game ExultMenu::run()
 			menu->add_entry(new MenuEntry(exult_flx.get_shape(menuchoices[i],1),
 						      exult_flx.get_shape(menuchoices[i],0),
 						      centerx, ypos));
+			if(i==0)
+				sfx_bg_ypos = ypos;
+			if(i==1)
+				sfx_si_ypos = ypos;
 			ypos += exult_flx.get_shape(menuchoices[i],0)->get_height()+2;
 			menuentries[entries++]=i;
 		}
@@ -317,9 +322,11 @@ Exult_Game ExultMenu::run()
 	Exult_Game sel_game = NONE;
 	
 	do {
-		gwin->paint_shape(topx,topy,exult_flx.get_shape(4, 1));
+		gwin->paint_shape(topx,topy,exult_flx.get_shape(EXULT_FLX_EXULT_LOGO_SHP, 1));
 		font->draw_text(gwin->get_win()->get_ib8(), 
 					topx+320-font->get_text_width(VERSION), topy+190, VERSION);
+		gwin->paint_shape(centerx-80,sfx_bg_ypos,exult_flx.get_shape(EXULT_FLX_SFX_ICON_SHP, Audio::get_ptr()->can_sfx("blackgate")?1:0));
+		gwin->paint_shape(centerx-80,sfx_si_ypos,exult_flx.get_shape(EXULT_FLX_SFX_ICON_SHP, Audio::get_ptr()->can_sfx("serpentisle")?1:0));
 		int choice = menu->handle_events(gwin, menu_mouse);
 		switch(choice<0?choice:menuentries[choice]) {
 		case 5:
